Add tests, fix errors